# Self-Balancing-Robot_ROS2

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch.py
meshes/: base_link.STL  left_wheel.STL  right_wheel.STL  untitled.stl
msg/: Contact.msg  Contacts.msg
plugins/: CMakeLists.txt  contact_bridge_plugin.cpp
src/: SelfBalancingEnv.py  contactNode.py  data.py  diff_drive.py  imu_reader.py  lqr.py
src/env/: Robot.py  SelfBalancingEnv.py  contact_detector.py  data.py  training.py  validation.py
src/nodes/: differentialDrive.py  imuReader.py  lqr.py
urdf/: sbr.urdf
worlds/: custom.world
